--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
         
     <application
-        android:name="se.kjellstrand.viewholderantipattern.VolleyDemoApplication"
+        android:name="se.kjellstrand.viewholderantipattern.DemoApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
